objects/OUV_Service__c.object
<CustomObject>
    <description>This objects stores all types of services available for Reservations, modelled as a Dimension in Booker25 with a junction Object between Reservation and Service.</description>
    <label>Service</label>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Fluffy Carpets</fullName>
                </value>
                <value>
                    <fullName>Vehicle Polish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <defaultValue>$User.Country</defaultValue>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OUV_Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Service_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
</CustomObject>